--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,17 @@ html, body, #root {
   align-items: center;
   overflow: hidden;
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #01953F40;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #13bd5a;
+  border-radius: 10px;
+}
